<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/line1"
            android:id="@+id/line1"
            android:layout_gravity="right"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/line2"
            android:id="@+id/line2"
            android:layout_gravity="right"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/line3"
            android:id="@+id/line3"
            android:layout_gravity="right"
            android:textColor="@color/colorBackgroungLight"
            android:textSize="15dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/line4"
            android:id="@+id/line4"
            android:layout_gravity="right"
            android:textColor="@color/colorBackgroungLight"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>