<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/frontend"

    tools:context="com.dybinski.midioverbluetooth.Frontend"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title1"
            android:id="@+id/title1"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_centerVertical="true"
            android:layout_above="@+id/btDis" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title2"
            android:id="@+id/title2"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="false"
            android:layout_below="@+id/btDis" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/btEna"
            android:src="@drawable/bt_ena"
            android:layout_alignStart="@+id/btDis"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="true"
            android:alpha="1"
            android:adjustViewBounds="true"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btDis"
            android:src="@drawable/bt_dis"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:alpha="1"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/author"
            android:id="@+id/author"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorBackgroungLight"
            android:textStyle="italic" />

    </RelativeLayout>

</RelativeLayout>
